# m26-py

./: .python-version  CLAUDE.md  README.md  backup.xml  build.sh  code-reformat.ps1  code-reformat.sh  dist.sh  m26-py-examples.py  pip_list.txt  pyproject.toml  requirements.in  requirements.txt  sample-program.py  setup.py  test.sh  tests.ps1  tests.sh  venv.ps1  venv.sh
docs/: python-notes.md
m26/: __init__.py  age_calculator.py  constants.py  distance.py  elapsed_time.py  run_walk_calculator.py  speed.py
obsolete/: MANIFEST.in  README.rst
test_project/: reademe.md  requirements.in  requirements.txt  venv.ps1  venv.sh
tests/: test_age_calculator.py  test_run_walk_calculator.py  test_version_and_author.py
