[project]
name = "m26"
version = "0.4.0"
dependencies = [
  "black",
  "pytest==8.3.3",
  "pytest-cov==5.0.0",
  "twine==5.1.1",
]
requires-python = ">=3.12"
authors = [
  {name = "Chris Joakim", email = "christopher.joakim@gmail.com"}
]
maintainers = [
  {name = "Chris Joakim", email = "christopher.joakim@gmail.com"}
]
description = "m26 - calculations for sports like running, cycling, and swimming"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
  "python",
  "calculator",
  "pace-per-mile",
  "mph",
  "kph",
  "yph",
  "age-graded",
  "running",
  "cycling",
  "swimming"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/cjoakim/m26-py"

[tool.setuptools.packages.find]
include = ['m26']
exclude = ['tmp', 'html', 'test_project']

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["E722"]
