[project]
name = "m26"
version = "1.0.0"

dependencies = [
  "pylint>=4.0.4",
  "pytest-cov>=6.1.1",
  "pytest-randomly>=4.0.0",
  "pytest>=8.3.5",
]

requires-python = ">=3.13"
authors = [
  {name = "Chris Joakim", email = "christopher.joakim@gmail.com"}
]
maintainers = [
  {name = "Chris Joakim", email = "christopher.joakim@gmail.com"}
]
description = "calculations for sports like running, cycling, and swimming"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["sports calculations", "running", "cycling", "swimming"]
classifiers = [
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/cjoakim/m26-py"

[tool.setuptools.packages.find]
include = ["m26*"]

[tool.ruff]
line-length = 100

[tool.pylint]
max-line-length = 120          # Set maximum line length
output-format = "colorized"    # Set output format
